# BASH-RAG

./: HopBuilder.py  HopGenerator.py  HopQStrategy.py  HopRetriever.py  README.md  eval_retrieval.py  graph_augment.py  pyproject.toml  requirements.txt  tool.py
outputs/augment_cache/: hotpot_qs_aug_r1_mst_knn2_bidir_llmq_v2_questions.json  hotpot_qs_aug_r1_mst_knn2_llmq_filtered_questions.json
outputs/augmentation/: hotpot_500_aug_r2_mst_knn2_llmq_skipinvalid_questions.json  hotpot_500_aug_shared_stable_questions_v2.json  hotpot_full_aug_r2_k0_llmq_v2_questions.json  hotpot_full_aug_r2_k2_llmq_v2_questions.json
outputs/eval/: hotpot_500_aug_r1_k0_llmq_v2_edge_bfs_hop2.json  hotpot_500_aug_r1_k0_llmq_v2_edge_bfs_hop4.json  hotpot_500_aug_r1_k0_llmq_v2_edge_paper_bfs_hop4.json  hotpot_500_aug_r2_edge_bfs_hop2.json  hotpot_500_aug_r2_k0_llmq_v2_edge_bfs_hop2.json  hotpot_500_aug_r2_k0_llmq_v2_edge_bfs_hop4.json  hotpot_500_aug_r2_k0_llmq_v2_edge_paper_bfs_hop4.json  hotpot_500_aug_r2_k1_llmq_v2_edge_bfs_hop2.json  hotpot_500_aug_r2_k1_llmq_v2_edge_bfs_hop4.json  hotpot_500_aug_r2_k1_llmq_v2_edge_paper_bfs_hop4.json  hotpot_500_aug_r2_k2_llmq_v2_edge_bfs_hop2.json  hotpot_500_aug_r2_k2_llmq_v2_edge_bfs_hop4.json  hotpot_500_aug_r2_k2_llmq_v2_edge_paper_bfs_hop4.json  hotpot_500_aug_r2_skipinvalid_edge_bfs_hop4.json  hotpot_500_aug_r3_k0_llmq_v2_edge_bfs_hop2.json  hotpot_500_aug_r3_k0_llmq_v2_edge_bfs_hop4.json  hotpot_500_aug_r3_k0_llmq_v2_edge_paper_bfs_hop4.json  (+3 more)
reports/: final_paper_experiment_plan.md  final_paper_methodology_experiments.tex
(+19 files in other folders)
