[project]
name = "hoprag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jsonlines>=4.0.0",
    "loguru>=0.7.3",
    "modelscope>=1.37.1",
    "neo4j>=6.2.0",
    "nltk>=3.9.4",
    "numpy>=2.2.6",
    "openai>=2.38.0",
    "paddlenlp>=2.6.1",
    "paddlepaddle>=3.3.1",
    "sentence-transformers>=5.5.1",
    "setuptools-scm>=10.0.5",
    "swifter>=1.4.0",
    "torch>=2.10.0",
]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'"
]
